Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-10288

[C++] Compilation fails on i386

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • None
    • 2.0.0
    • C++

    Description

      [446/645] Building CXX object src/parquet/CMakeFiles/parquet_objlib.dir/level_conversion_bmi2.cc.o
      FAILED: src/parquet/CMakeFiles/parquet_objlib.dir/level_conversion_bmi2.cc.o 
      /usr/bin/ccache /usr/bin/c++  -DARROW_HAVE_RUNTIME_AVX2 -DARROW_HAVE_RUNTIME_AVX512 -DARROW_HAVE_RUNTIME_BMI2 -DARROW_HAVE_RUNTIME_SSE4_2 -DARROW_HAVE_SSE4_2 -DARROW_JEMALLOC -DARROW_JEMALLOC_INCLUDE_DIR="" -DARROW_NO_DEPRECATED_API -DARROW_USE_GLOG -DARROW_WITH_BROTLI -DARROW_WITH_BZ2 -DARROW_WITH_LZ4 -DARROW_WITH_SNAPPY -DARROW_WITH_TIMING_TESTS -DARROW_WITH_UTF8PROC -DARROW_WITH_ZLIB -DARROW_WITH_ZSTD -DGTEST_LINKED_AS_SHARED_LIBRARY=1 -DHAVE_INTTYPES_H -DHAVE_NETDB_H -DHAVE_NETINET_IN_H -DPARQUET_EXPORTING -isystem /arrow/cpp/thirdparty/flatbuffers/include -isystem thrift_ep-install/include -isystem jemalloc_ep-prefix/src -isystem googletest_ep-prefix/include -isystem /arrow/cpp/thirdparty/hadoop/include -isystem orc_ep-install/include -Isrc -I/arrow/cpp/src -I/arrow/cpp/src/generated -Wno-noexcept-type  -fdiagnostics-color=always -ggdb -O0  -Wall -Wno-conversion -Wno-deprecated-declarations -Wno-sign-conversion -Wno-unused-variable -Werror -fno-semantic-interposition -msse4.2  -g -fPIC   -std=c++11 -march=haswell -mavx2 -DARROW_HAVE_BMI2 -mbmi2 -MD -MT src/parquet/CMakeFiles/parquet_objlib.dir/level_conversion_bmi2.cc.o -MF src/parquet/CMakeFiles/parquet_objlib.dir/level_conversion_bmi2.cc.o.d -o src/parquet/CMakeFiles/parquet_objlib.dir/level_conversion_bmi2.cc.o -c /arrow/cpp/src/parquet/level_conversion_bmi2.cc
      In file included from /arrow/cpp/src/parquet/level_conversion_bmi2.cc:20:0:
      /arrow/cpp/src/parquet/level_conversion_inc.h: In function 'uint64_t parquet::internal::bmi2::ExtractBits(uint64_t, uint64_t)':
      /arrow/cpp/src/parquet/level_conversion_inc.h:263:10: error: '_pext_u64' was not declared in this scope
         return _pext_u64(bitmap, select_bitmap);
                ^~~~~~~~~
      /arrow/cpp/src/parquet/level_conversion_inc.h:263:10: note: suggested alternative: '_pext_u32'
         return _pext_u64(bitmap, select_bitmap);
                ^~~~~~~~~
                _pext_u32
      

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m