ARROW-10288: [C++] Fix compilation errors on 32-bit x86